ensure nested lists are not too big, fixes #69

--- a/source/stylesheets/_agency.scss
+++ b/source/stylesheets/_agency.scss
@@ -313,8 +313,11 @@ section {
     max-width: 700px;
   }
   li {
-    font-size: 1.5em;
+    font-size: 1.4em;
     line-height: 1.75;
+  }
+  li li {
+    font-size: 0.9em;
   }
 }
 
